--- a/package.json
+++ b/package.json
@@ -39,12 +39,15 @@
     "standard": "^10.0.2"
   },
   "dependencies": {
+    "bignumber.js": "^4.0.2",
     "commander": "^2.11.0",
     "ipfs-api": "^14.1.1",
     "node-schedule": "^1.2.3",
     "web3": "^1.0.0-beta.14"
   },
   "standard": {
-    "globals": [ "config" ]
+    "globals": [
+      "config"
+    ]
   }
 }
