--- a/setup/docker-compose.yml
+++ b/setup/docker-compose.yml
@@ -10,7 +10,7 @@ services:
      - ../data/ipfs/data:/data/ipfs
      - ../data/ipfs/staging:/export
   testrpc:
-    image: "harshjv/testrpc:latest"
+    image: "testprc_persist:latest"
     ports:
       - "8545:8545"
-    command: --accounts 400 --seed 123123
+    command: --db /data/persist --seed 20170811 --gasPrice 0 --debug --account="0x348ce564d427a3311b6536bbcff9390d69395b06ed6c486954e971d960fe8709,180000000000000000000"
